# $Id: Makefile.am,v 1.1.1.1 2002/08/05 22:26:03 route Exp $
#
# Libnet automake information file
# Copyright (c) 1998 - 2002 Mike D. Schiffman <mike@infonexus.com>
# All rights reserved.
#
# Process this file with automake to produce a Makefile.in script.

include $(top_srcdir)/Makefile.am.common

SUBDIRS = include src man sample

EXTRA_DIST = Makefile.am.common
